# cltv-scan

./: .gitignore  Cargo.toml  LICENSE  README.md
docs/planning/: phase-0-overview.md  phase-1-data-fetching-and-timelock-extraction.md  phase-2-lightning-identification.md  phase-3-security-analysis.md  phase-4-http-server.md  phase-5-dashboard.md
src/: lib.rs  main.rs
src/api/: floresta_client.rs  mod.rs
src/cli/: output.rs
src/lightning/: detector.rs  mod.rs  types.rs
tests/: lightning_tests.rs
